Include the nav and footer partials in the main layout

--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -6,6 +6,8 @@
 		<title><%= title %></title>
 	</head>
 	<body>
+        <%- include('../partials/navigation.ejs') %>
 		<main><%- body %></main>
+        <%- include('../partials/footer.ejs') %>
 	</body>
 </html>
