--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,12 +1,12 @@
-<nav>
+<nav id="navigation-wrapper">
     <ul class="main-navigation">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contacts">Contacts</a></li>
+        <li><a class="link" href="/">Home</a></li>
+        <li><a class="link" href="/about">About</a></li>
+        <li><a class="link" href="/contacts">Contacts</a></li>
     </ul>
     <ul class="mobile-navigation">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contacts">Contacts</a></li>
+        <li><a class="link" href="/">Home</a></li>
+        <li><a class="link" href="/about">About</a></li>
+        <li><a class="link" href="/contacts">Contacts</a></li>
     </ul>
 </nav>
