Add font family and some general styles

--- a/src/public/scss/_variables.scss
+++ b/src/public/scss/_variables.scss
@@ -1,2 +1,4 @@
 $navigation: ("background": #231f20, "color": red);
+$font-power: ("lighter": 300, "regular": 400, "bold": 700);
+
 $size-default: 1rem;
