--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -8,7 +8,7 @@
 	</head>
 	<body>
         <%- include('../partials/navigation.ejs') %>
-		<main><%- body %></main>
+		<%- body %>
         <%- include('../partials/footer.ejs') %>
 	</body>
 </html>
