start to work on the navigation

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
-$navigation: ("background": #231f20, "color": red);
+$navigation: ("background": #231f20, "color": white, "hover": red);
 $font-power: ("lighter": 300, "regular": 400, "bold": 700);
 
 $size-default: 1rem;
+$border-radius: 8px;
