--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,10 +1,10 @@
 <nav id="navigation-wrapper">
-    <ul class="main-navigation">
+    <ul class="main-navigation navigation">
         <li><a class="link" href="/">Home</a></li>
         <li><a class="link" href="/about">About</a></li>
         <li><a class="link" href="/contacts">Contacts</a></li>
     </ul>
-    <ul class="mobile-navigation">
+    <ul class="mobile-navigation navigation">
         <li><a class="link" href="/">Home</a></li>
         <li><a class="link" href="/about">About</a></li>
         <li><a class="link" href="/contacts">Contacts</a></li>
