--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,6 +1,38 @@
 @import '_variables.scss';
 
 #navigation-wrapper {
-	background-color: map-get($map: $navigation, $key: background);
+    .main-navigation {
+        display: none;
+    }
+
+    .navigation {
+        max-width: 1020px;
+        margin: 0 auto;
+        height: 100%;
+        font-size: $size-default * 1.3;
+    }
+
+    background-color: map-get($map: $navigation, $key: background);
     color: map-get($map: $navigation, $key: color);
+    height: 4rem;
+
+    @media (min-width: 600px) {
+        .mobile-navigation {
+            display: none;
+        }
+
+        .main-navigation {
+            display: flex;
+            align-items: center;
+
+            .link {
+                padding: 0.4rem 0.5rem;
+                border-radius: $border-radius;
+            }
+
+            .link:hover {
+                background-color: map-get($map: $navigation, $key: hover);
+            }
+        }
+    }
 }
