add more styles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,6 @@
-$navigation: ("background": #231f20, "color": white, "hover": red);
+$navigation: ("background": #231f20, "color": white, "hover": rgba(255, 255, 255, 0.22));
 $font-power: ("lighter": 300, "regular": 400, "bold": 700);
 
 $size-default: 1rem;
 $border-radius: 8px;
+$max-width: 1020px;
