--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -23,12 +23,6 @@ ul {
   padding: 0;
 }
 
-footer {
-  margin-top: auto;
-  background-color: #231f20;
-  color: white;
-}
-
 #navigation-wrapper {
   background-color: #231f20;
   color: white;
@@ -52,11 +46,34 @@ footer {
     align-items: center;
   }
   #navigation-wrapper .main-navigation .link {
-    padding: 0.4rem 0.5rem;
+    padding: 0.4rem 0.6rem;
     border-radius: 8px;
   }
+}
+@media (min-width: 600px) and (hover: hover) {
   #navigation-wrapper .main-navigation .link:hover {
-    background-color: red;
+    background-color: rgba(255, 255, 255, 0.22);
+  }
+}
+
+#footer-wrapper {
+  margin-top: auto;
+  background-color: #231f20;
+  color: white;
+  height: 3rem;
+}
+#footer-wrapper .footer-list {
+  max-width: 1020px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  height: 100%;
+}
+@media (hover: hover) {
+  #footer-wrapper .footer-list .link:hover {
+    color: red;
   }
 }
 
