--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-<footer>
-	<ul class="footer-links">
-		<li><a href="/">Home</a></li>
-		<li><a href="/about">About</a></li>
-		<li><a href="/contacts">Contacts</a></li>
+<footer id="footer-wrapper">
+	<ul class="footer-list">
+		<li><a class="link" href="/">Home</a></li>
+		<li><a class="link" href="/about">About</a></li>
+		<li><a class="link" href="/contacts">Contacts</a></li>
 	</ul>
 </footer>
