add element to make a hamburger menu

--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,12 +1,21 @@
 <nav id="navigation-wrapper">
-    <ul class="main-navigation navigation">
-        <li><a class="link" href="/">Home</a></li>
-        <li><a class="link" href="/about">About</a></li>
-        <li><a class="link" href="/contacts">Contacts</a></li>
-    </ul>
-    <ul class="mobile-navigation navigation">
-        <li><a class="link" href="/">Home</a></li>
-        <li><a class="link" href="/about">About</a></li>
-        <li><a class="link" href="/contacts">Contacts</a></li>
-    </ul>
+	<div class="main-navigation-wrapper">
+		<ul id="main-list">
+			<li><a class="link" href="/">Home</a></li>
+			<li><a class="link" href="/about">About</a></li>
+			<li><a class="link" href="/contacts">Contacts</a></li>
+		</ul>
+	</div>
+	<div class="mobile-navigation-wrapper">
+        <div id="hamburger-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+		<ul id="mobile-list">
+			<li><a class="link" href="/">Home</a></li>
+			<li><a class="link" href="/about">About</a></li>
+			<li><a class="link" href="/contacts">Contacts</a></li>
+		</ul>
+	</div>
 </nav>
