--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,63 +1,88 @@
 @import '_variables.scss';
 
 #navigation-wrapper {
-	.main-navigation {
-		display: none;
-	}
-
-	.navigation {
-		max-width: $max-width;
-		margin: 0 auto;
-		height: 100%;
-		font-size: $size-default * 1.3;
-	}
-
-	background-color: map-get($map: $navigation, $key: background);
+    background-color: map-get($map: $navigation, $key: background);
 	color: map-get($map: $navigation, $key: color);
 	height: $size-default * 4;
 
-	@media (min-width: 600px) {
-		.mobile-navigation {
-			display: none;
+	.main-navigation-wrapper {
+		display: none;
+        padding: 0 $size-default;
+	}
+
+	.mobile-navigation-wrapper {
+        padding: 0 $size-default;
+		position: relative;
+		display: flex;
+		align-items: center;
+		height: 100%;
+
+		#hamburger-menu {
+			display: flex;
+			flex-direction: column;
+			gap: 0.5rem;
+			width: 35px;
+			cursor: pointer;
+
+			.bar {
+				width: 100%;
+				height: 3px;
+				border-radius: 8px;
+				background-color: white;
+			}
 		}
 
-		.main-navigation {
-			display: flex;
-			align-items: center;
+		#hamburger-menu.active {
+			.bar {
+				background-color: red;
+			}
+		}
 
-			.link {
-				padding: 0.4rem 0.6rem;
-				border-radius: $border-radius;
+		#mobile-list {
+			opacity: 0;
+            margin-top: $size-default * 4;
+            pointer-events: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: map-get($map: $navigation, $key: background);
+            display: flex;
+            flex-direction: column;
+            gap: $size-default / 2;
+            padding: $size-default;
+            width: 100%;
+            min-height: $size-default * 10;
+		}
+	}
 
-				@media (hover: hover) {
-					&:hover {
-						background-color: map-get($map: $navigation, $key: hover);
+	@media (min-width: 600px) {
+		.mobile-navigation-wrapper {
+			display: none;
+        }   
+
+		.main-navigation-wrapper {
+			display: block;
+			height: 100%;
+			max-width: $max-width;
+			margin: 0 auto;
+
+			#main-list {
+				display: flex;
+				gap: $size-default / 2;
+				height: 100%;
+				align-items: center;
+
+				.link {
+					padding: 0.6rem;
+					border-radius: $border-radius;
+
+					@media (hover: hover) {
+						&:hover {
+							background-color: map-get($map: $navigation, $key: hover);
+						}
 					}
 				}
 			}
 		}
-	}
-}
-
-#footer-wrapper {
-	margin-top: auto;
-	background-color: map-get($map: $navigation, $key: background);
-	color: map-get($map: $navigation, $key: color);
-	height: $size-default * 3;
-
-	.footer-list {
-		max-width: $max-width;
-		margin: 0 auto;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		gap: $size-default;
-		height: 100%;
-
-		@media (hover: hover) {
-            .link:hover {
-                color: red;
-            }
-        }
 	}
 }
