--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/main.css">
+        <script src="/js/toggleMenu.js" defer></script>
 		<title><%= title %></title>
 	</head>
 	<body>
         <%- include('../partials/navigation.ejs') %>
 		<%- body %>
         <%- include('../partials/footer.ejs') %>
+        <div id="backdrop"></div>
 	</body>
 </html>
