--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 
 body {
 	min-height: 100vh;
+    position: relative;
 	margin: 0;
     font-family: 'Montserrat', 'Helvetica', sans-serif;
     font-weight: map-get($map: $font-power, $key: regular);
