--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -4,6 +4,7 @@
     background-color: map-get($map: $navigation, $key: background);
 	color: map-get($map: $navigation, $key: color);
 	height: $size-default * 4;
+    z-index: 5;
 
 	.main-navigation-wrapper {
 		display: none;
@@ -35,6 +36,18 @@
 		#hamburger-menu.active {
 			.bar {
 				background-color: red;
+
+                &:nth-child(2) {
+                opacity: 0;
+                }
+                
+                &:first-child {
+                    transform: translateY(11px) rotate(45deg);
+                }
+
+                &:last-child {
+                    transform: translateY(-11px) rotate(-45deg);
+                }
 			}
 		}
 
@@ -43,15 +56,14 @@
             margin-top: $size-default * 4;
             pointer-events: none;
             position: absolute;
-            top: 0;
+            top: -1px;
             left: 0;
             background-color: map-get($map: $navigation, $key: background);
             display: flex;
             flex-direction: column;
-            gap: $size-default / 2;
-            padding: $size-default;
+            gap: $size-default;
+            padding: $size-default $size-default $size-default * 3 $size-default;
             width: 100%;
-            min-height: $size-default * 10;
 		}
 	}
 
