--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,18 +1,18 @@
 @import '_variables.scss';
 
 #navigation-wrapper {
-    background-color: map-get($map: $navigation, $key: background);
+	background-color: map-get($map: $navigation, $key: background);
 	color: map-get($map: $navigation, $key: color);
 	height: $size-default * 4;
-    z-index: 5;
+	z-index: 5;
 
 	.main-navigation-wrapper {
 		display: none;
-        padding: 0 $size-default;
+		padding: 0 $size-default;
 	}
 
 	.mobile-navigation-wrapper {
-        padding: 0 $size-default;
+		padding: 0 $size-default;
 		position: relative;
 		display: flex;
 		align-items: center;
@@ -35,42 +35,43 @@
 
 		#hamburger-menu.active {
 			.bar {
-				background-color: red;
+                transition: all 0.2s ease-out;
 
-                &:nth-child(2) {
-                opacity: 0;
-                }
-                
-                &:first-child {
-                    transform: translateY(11px) rotate(45deg);
-                }
+				&:nth-child(2) {
+					opacity: 0;
+				}
 
-                &:last-child {
-                    transform: translateY(-11px) rotate(-45deg);
-                }
+				&:first-child {
+					transform: translateY(11px) rotate(45deg);
+				}
+
+				&:last-child {
+					transform: translateY(-11px) rotate(-45deg);
+				}
 			}
 		}
 
 		#mobile-list {
 			opacity: 0;
-            margin-top: $size-default * 4;
-            pointer-events: none;
-            position: absolute;
-            top: -1px;
-            left: 0;
-            background-color: map-get($map: $navigation, $key: background);
-            display: flex;
-            flex-direction: column;
-            gap: $size-default;
-            padding: $size-default $size-default $size-default * 3 $size-default;
-            width: 100%;
+			margin-top: $size-default * 4;
+			pointer-events: none;
+			position: absolute;
+			top: -1px;
+			left: 0;
+			background-color: map-get($map: $navigation, $key: background);
+			display: flex;
+			flex-direction: column;
+			gap: $size-default;
+			padding: $size-default $size-default $size-default * 3 $size-default;
+			width: 100%;
+		    transition: all 0.3s ease-in-out;
 		}
 	}
 
 	@media (min-width: 600px) {
 		.mobile-navigation-wrapper {
 			display: none;
-        }   
+		}
 
 		.main-navigation-wrapper {
 			display: block;
