--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -52,12 +52,10 @@
 		}
 
 		#mobile-list {
-			opacity: 0;
 			margin-top: $size-default * 4;
-			pointer-events: none;
 			position: absolute;
 			top: -1px;
-			left: 0;
+			left: -100%;
 			background-color: map-get($map: $navigation, $key: background);
 			display: flex;
 			flex-direction: column;
