--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -67,12 +67,10 @@ ul {
   transform: translateY(-11px) rotate(-45deg);
 }
 #navigation-wrapper .mobile-navigation-wrapper #mobile-list {
-  opacity: 0;
   margin-top: 4rem;
-  pointer-events: none;
   position: absolute;
   top: -1px;
-  left: 0;
+  left: -100%;
   background-color: #231f20;
   display: flex;
   flex-direction: column;
