--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -21,32 +21,41 @@
 		#hamburger-menu {
 			display: flex;
 			flex-direction: column;
-			gap: 0.5rem;
-			width: 35px;
+            justify-content: center;
+            align-items: center;
+			width: 25px;
+            height: 100%;
+            gap: 6px;
 			cursor: pointer;
 
 			.bar {
 				width: 100%;
-				height: 3px;
-				border-radius: 8px;
+				height: 2px;
+				border-radius: 2px;
 				background-color: white;
 			}
 		}
 
 		#hamburger-menu.active {
-			.bar {
-                transition: all 0.2s ease-out;
+            position: relative;
 
+            &::after {
+                content: 'Close';
+                position: absolute;
+                right: -47px;
+            }
+
+			.bar {
 				&:nth-child(2) {
 					opacity: 0;
 				}
 
 				&:first-child {
-					transform: translateY(11px) rotate(45deg);
+					transform: translateY(8px) rotate(45deg);
 				}
 
 				&:last-child {
-					transform: translateY(-11px) rotate(-45deg);
+					transform: translateY(-8px) rotate(-45deg);
 				}
 			}
 		}
