--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -44,27 +44,35 @@ ul {
 #navigation-wrapper .mobile-navigation-wrapper #hamburger-menu {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  width: 35px;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 100%;
+  gap: 6px;
   cursor: pointer;
 }
 #navigation-wrapper .mobile-navigation-wrapper #hamburger-menu .bar {
   width: 100%;
-  height: 3px;
-  border-radius: 8px;
+  height: 2px;
+  border-radius: 2px;
   background-color: white;
 }
-#navigation-wrapper .mobile-navigation-wrapper #hamburger-menu.active .bar {
-  transition: all 0.2s ease-out;
+#navigation-wrapper .mobile-navigation-wrapper #hamburger-menu.active {
+  position: relative;
+}
+#navigation-wrapper .mobile-navigation-wrapper #hamburger-menu.active::after {
+  content: "Close";
+  position: absolute;
+  right: -47px;
 }
 #navigation-wrapper .mobile-navigation-wrapper #hamburger-menu.active .bar:nth-child(2) {
   opacity: 0;
 }
 #navigation-wrapper .mobile-navigation-wrapper #hamburger-menu.active .bar:first-child {
-  transform: translateY(11px) rotate(45deg);
+  transform: translateY(8px) rotate(45deg);
 }
 #navigation-wrapper .mobile-navigation-wrapper #hamburger-menu.active .bar:last-child {
-  transform: translateY(-11px) rotate(-45deg);
+  transform: translateY(-8px) rotate(-45deg);
 }
 #navigation-wrapper .mobile-navigation-wrapper #mobile-list {
   margin-top: 4rem;
